# access

./: .env-production.example  .env.example  .env.production.example  .env.psql.example  .flaskenv  .gitignore  .mypy.ini  .npmrc  .prettierignore  .prettierrc  .testenv  .worktreeinclude  CLAUDE.md  Dockerfile  Dockerfile.fastapi  FASTAPI_USAGE.md  FLASK_TO_FASTAPI_MIGRATION_PLAN.md  Makefile  OPERATIONS_MIGRATION_GUIDE.md  POST_MIGRATION_TODO.md  README.md  alembic.ini  craco.config.js  dev.sh  docker-compose.yml  env.production  flake.nix  gunicorn_logging.py  index.html  openapi-codegen.config.ts  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  run.sh  run_fastapi.py  setup.py  test_all_schemas.py  (+21 more)
.claude/: CLAUDE.md  access-dev-frontend.md  access-dev-sync.md  access-dev-testing.md  launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  db-migrations.yml  docker-hub.yml  docker-image.yml  lint.yml  openapi-client-drift.yml  semgrep.yml
api/: access_config.py  apispec.py  app.py  asgi.py  authentication.py  authorization.py  cli.py  config.py  context.py  database.py  exception_handlers.py  exceptions.py  extensions.py  helpers.py  integrity.py  log_filters.py  manage.py  middleware.py  pagination.py  swagger.json  syncer.py  wsgi.py
api/auth/: __init__.py  cloudflare.py  dependencies.py  oidc.py  permissions.py
api/mcp/: __init__.py  db.py  prompts.py  server.py  tools.py
api/models/: __init__.py  access_request.py  app_group.py  core_models.py  okta_group.py  tag.py
api/operations/: __init__.py  _fan_out.py  approve_access_request.py  approve_group_request.py  approve_role_request.py  create_access_request.py  create_app.py  create_group.py  create_group_request.py  create_role_request.py  create_tag.py  delete_app.py  delete_group.py  delete_tag.py  delete_user.py  modify_app_tags.py  modify_group_basic.py  modify_group_details.py  modify_group_plugin_data.py  modify_group_tags.py  modify_group_type.py  modify_group_users.py  modify_groups_time_limit.py  modify_role_groups.py  reject_access_request.py  reject_group_request.py  reject_role_request.py  unmanage_group.py
api/plugins/: __init__.py  _async_dispatch.py  app_group_lifecycle.py  audit_events.py  conditional_access.py  mcp_auth.py  metrics_reporter.py  notifications.py  requests.py  setup.py
api/routers/: _eager.py  _fan_out.py  _route.py  access_requests.py  apps.py  audit.py  bugs.py  config.py  group_requests.py  groups.py  health.py  plugins.py  role_requests.py  roles.py  tags.py  users.py  webhook.py
api/schemas/: __init__.py  _serialize.py  audit_logs.py  audit_rows.py  config_schemas.py  core_schemas.py  datetimes.py  delete_message.py  pagination.py  plugin_schemas.py  requests_schemas.py  rfc822.py
api/services/: __init__.py  okta_service.py
api/views/: access_requests_views.py  apps_views.py  audit_views.py  bugs_views.py  exception_views.py  group_requests_views.py  groups_views.py  health_check_views.py  metrics_views.py  plugins_views.py  role_requests_views.py  roles_views.py  tags_views.py  users_views.py  webhook_views.py
api_v2/: config.py  database.py  dependencies.py  exceptions.py  log_filters.py  main.py
api_v2/auth/: __init__.py  authentication.py  authorization.py  dependencies.py  middleware.py
api_v2/middleware/: __init__.py  security.py
api_v2/models/: __init__.py  access_request.py  app_group.py  base.py  core_models.py  okta_group.py  tag.py
api_v2/operations/: __init__.py  approve_access_request.py  approve_role_request.py  create_access_request.py  create_app.py  create_group.py  create_role_request.py  create_tag.py  delete_app.py  delete_group.py  delete_tag.py  delete_user.py  modify_app_tags.py  modify_group_tags.py  modify_group_type.py  modify_group_users.py  modify_groups_time_limit.py  modify_role_groups.py  reject_access_request.py  reject_role_request.py  unmanage_group.py
api_v2/plugins/: __init__.py  setup.py
api_v2/routers/: groups.py  health.py  users.py
api_v2/schemas/: __init__.py  audit_logs.py  base.py  core_schemas.py  delete_message.py  group_memberships.py  groups.py  metrics.py  pagination.py  requests.py  role_memberships.py  tags.py  users.py
api_v2/security/: __init__.py
api_v2/services/: __init__.py  okta_service.py
config/: config.default.json
examples/kubernetes/: cron-job-notify-owners.yaml  cron-job-notify-users.yaml  cron-job-syncer.yaml  deployment.yaml  namespace.yaml  service-account.yaml  service.yaml
examples/plugins/: README.md
migrations/: env.py
migrations/versions/: 0a113a8bc0df_create_new_indexes.py  0a7f1ca77b12_do_not_renew.py  0ed12d651875_add_app_group_lifecycle_plugin_to_app.py  11a0117dabea_group_requests.py  128a7f45cac6_group_request_plugin_data.py  61afb5496c0a_index_okta_user_group_member_group_.py  7be9deabf3ab_.py  (+7 more)
nix/: dev-shell-hook.sh
public/: index.html  manifest.json
src/: App.tsx  RegexConfig.tsx  authentication.tsx  authorization.tsx  env-overrides.tsx  globals.d.ts  helpers.tsx  index.tsx  mui.d.ts  tab-title.tsx
tests/: conftest.py  factories.py  helpers.py  request_factories.py  test_access_config.py  test_access_request.py  test_app.py  test_app_group_lifecycle_plugin.py  test_approve_reject_stale_state.py  test_async_dispatch.py  test_audit.py  test_audit_events.py  test_bugs.py  test_concurrency_config.py  test_config.py  test_config_endpoint.py  test_database_ssl.py  test_deferred_fan_out.py  test_delete_user_rejects_pending_requests.py  test_disallow_self_add_constraint.py  test_expire_access_request.py  test_expiring_access_notifications.py  test_fanout_task_errors.py  test_group.py  test_group_membership_sync.py  test_group_ownership_sync.py  test_group_request.py  test_group_request_plugin_config.py  test_group_sync.py  test_health_check.py  test_log_filters.py  test_mcp.py  test_metrics_reporter_validation.py  test_notification_metrics.py  test_oidc.py  test_okta_retries.py  test_okta_service.py  test_okta_timeout.py  test_okta_transient_errors.py  test_operation_notify_gate.py  (+19 more)
(+213 files in other folders)
