[build-system]
# Use the setuptools backend so the wheel picks up api/config/migrations via
# package discovery and bundles config/*.json (see [tool.setuptools] below).
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "access"
version = "2.0"
requires-python = ">=3.13"
dependencies = [
    # FastAPI
    "fastapi==0.139.0",
    "fastapi-pagination==0.15.15",
    "uvicorn[standard]==0.50.2",
    "gunicorn==23.0.0",
    "itsdangerous==2.2.0",
    "click==8.4.2",
    "python-dateutil==2.9.0.post0",
    # Pydantic
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.6,<3",
    # Database
    "SQLAlchemy[asyncio]==2.0.50",
    "alembic==1.18.5",
    "sqlalchemy-json==0.7.0",
    "asyncpg==0.31.0",
    "aiosqlite==0.22.1",
    "cloud-sql-python-connector[asyncpg]==1.20.4",
    # HTTP
    "httpx==0.28.1",
    # Security / auth
    "PyJWT[crypto]==2.13.0",
    "cachetools==7.1.4",
    "authlib==1.7.2",
    # Error Reporting
    "sentry-sdk[starlette,fastapi]==2.64.0",
    # Okta
    "okta==2.9.8",
    # Plugins
    "pluggy==1.6.0",
    # MCP — embedded Model Context Protocol server (gated behind ENABLE_MCP).
    # Bumping the major (2.x) will break imports — FastMCP's API has
    # historically reshaped between majors.
    "mcp[cli]==1.28.1",
]

[project.scripts]
access = "api.manage:cli"

# ----------------------------------------------------------------------
# Dependency groups (PEP 735) — installed by `uv sync`, excluded from the
# production image via `uv sync --no-dev`.
# ----------------------------------------------------------------------
[dependency-groups]
test = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-runner==6.0.1",
    "pytest-factoryboy==2.8.1",
    "pytest-mock==3.15.1",
    "factory_boy==3.3.3",
    "types-factory-boy==0.4.1",
]
dev = [
    # Lint / format
    "ruff==0.15.20",
    # Typing
    "ty==0.0.56",
    "types-python-dateutil==2.9.0.20260518",
    "types-cachetools==7.0.0.20260518",
    { include-group = "test" },
]

# ----------------------------------------------------------------------
# Packaging — bundle api/config/migrations, exclude tests, and ship
# config/*.json inside the wheel so the `access` console script finds
# config.default.json at its install location.
# ----------------------------------------------------------------------
[tool.setuptools.packages.find]
include = ["api*", "config*", "migrations*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
config = ["*.json"]

# ----------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------
[tool.ruff]
line-length = 120

# ----------------------------------------------------------------------
# pytest — async test config
# ----------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
filterwarnings = [
    "error:coroutine .* was never awaited:RuntimeWarning",
]

# ----------------------------------------------------------------------
# ty — type checker
# ----------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Several runtime deps ship without type information, so ty can't resolve
# them; keep unresolved imports non-fatal.
unresolved-import = "ignore"

# Relaxed modules. These surfaces lean on runtime invariants ty can't prove
# statically:
#   - the SQLAlchemy-heavy operations layer and the tests dereference
#     Optional query results as non-None;
#   - the Okta service wrappers touch SDK models that type every field
#     Optional and use custom data descriptors;
#   - the FastAPI routers/exception handlers and MCP tools reuse the same
#     Pydantic + query patterns.
# ty resolves the real types and flags these, so downgrade the affected
# rules here. The core (api/models, api/schemas, api/database, api/config, …)
# stays strict.
[[tool.ty.overrides]]
include = [
    "tests/**",
    "examples/**",
    "migrations/**",
    "api/routers/**",
    "api/operations/**",
    "api/services/**",
    "api/auth/**",
    "api/mcp/**",
    "api/exception_handlers.py",
    "api/manage.py",
    "api/app.py",
]

[tool.ty.overrides.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"
invalid-assignment = "ignore"
invalid-return-type = "ignore"
invalid-parameter-default = "ignore"
unsupported-operator = "ignore"
possibly-missing-submodule = "ignore"
deprecated = "ignore"
